Add status code to problem details.
