# openapi/openapi.yaml
@@ -142,6 +142,10 @@ components:
       description: A problem details response, which occured during processing
         of a request
       properties:
+        status_code:
+          type: integer
+          description: A http status code describing a problem
+          example: 500
         type:
           type: string
           description: An URI for identifiyng problem type
@@ -157,6 +161,7 @@ components:
           example: Entered email address 'foo@bar.com' is already used
       additionalProperties: false
       required:
+        - status_code
         - type
         - title
         - detail
